# mental_math_gym

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  base_classes.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.devcontainer/: devcontainer.json
backend/app/: config.py  deps.py  logging.py  main.py
backend/app/api/v1/: lessons.py  sessions.py
backend/app/db/: base.py  models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py
backend/app/schemas/: lesson.py  session.py  stats.py
backend/app/services/: session_service.py  stats_service.py
backend/tests/: conftest.py  test_api_lesson_stats.py  test_api_lessons.py  test_api_session_history.py  test_api_sessions.py  test_models.py  test_registry.py
frontend/: CLAUDE.md  index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  router.js  state.js
frontend/js/views/: gym.js  session_detail.js  tracker.js
lessons/: basic.py  mmmg.py
mathgen/: CLAUDE.md
mathgen/common/: problems.py  registry.py  utils.py
mathgen/lessons/: __init__.py  basic.py  mmmg.py
