[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mental-math-gym"
version = "0.1.0"
description = "Mental math practice application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "ipython>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mathgen*", "backend*"]

[tool.ruff]
line-length = 100
target-version = "py310"
